--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.8'
 
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+
 
 
 }
